# prospero

./: .gitignore  Cargo.toml  README.mt
crates/prospero/: Cargo.toml
crates/prospero/src/: egg.rs  interpreter.rs  lib.rs  parser.rs  utils.rs
interpreter/: Cargo.toml
interpreter/src/: main.rs
