[workspace]

members = [
    "crates/prospero"
]

resolver="2"

[workspace.dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
egg = "0.10.0"
itertools = "0.14.0"
ordered-float = "3.9.2"
rand = "0.9.0"
simplelog = "0.12.2"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["full"]}
